Past Events and Upcoming Events marked on Timeline Registration section closes after the event Fixed alignment issue of iPhone in About Section

--- a/css/custom.css
+++ b/css/custom.css
@@ -122,6 +122,8 @@ a.btn-custom-hero:hover::after {
 
 #section-about {
   overflow: hidden;
+  --phone-width: 336px;
+  --phone-height: 699px;
 }
 #section-about-desc {
   font-size: 18px;
@@ -135,8 +137,8 @@ a.btn-custom-hero:hover::after {
 
 #comparison {
   position: relative;
-  width: 400px; 
-  height: 500px;
+  width: var(--phone-width); 
+  height: calc(var(--phone-height) * 0.7);
   padding-top: 30px;
   transition: 0.5s;
 }
@@ -156,7 +158,7 @@ a.btn-custom-hero:hover::after {
   position: absolute;
   top: 0;
   left: 0;
-  height: 699px;
+  height: var(--phone-height);
   margin: 0;
 }
 
@@ -167,7 +169,7 @@ a.btn-custom-hero:hover::after {
 
 #comparison-before {
   background-image: url(../media/images/about/1.webp);
-  width: 336px;
+  width: var(--phone-width);
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
 }
 
@@ -508,6 +510,16 @@ a.btn-custom-hero:hover::after {
 /* Timeline Style */
 .timeline-item p {
   font-size: 18px;
+}
+
+.timeline-past .timeline-title {
+  text-decoration: line-through;
+  color: grey;
+}
+
+.timeline-upcoming .timeline-title,
+.timeline-upcoming .timeline-date {
+  color: var(--primary-color-1);
 }
 /* ================================================== */
 /* Awards section */
